# Orenyl

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_eval.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ADR.md  COMPLIANCE_READINESS.md  CONTEXT_PACK_SPEC.md  DR.md  INTEGRATION.md  MCP_TOOL_CONTRACTS.md  MIGRATION.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  SCALING.md  SECURITY_AUDIT.md  blog_post.md  launch-faq.md  launch-submissions.md  launch-tracker.md  outreach-list-template.csv  outreach-messages.md  outreach-sourcing.md  positioning.md  quickstart.md
docs/assets/: demo-script.md
docs/benchmarks/: v2-baseline.md
docs/guides/: claude-code.md  openclaw.md  production-http.md  production.env.example
docs/launch-posts/: github-announcement.md  reddit-local-llama.md  reddit-r-mcp.md  show-hn.md  x-thread.md
docs/plans/: 2026-04-06-orenyl-hard-rebrand-design.md  2026-04-06-orenyl-hard-rebrand-implementation-plan.md  2026-04-16-story-first-refresh-design.md  2026-04-16-story-first-refresh.md
examples/: README.md
examples/meeting-memory/: README.md  meeting_memory.py
examples/multi-agent-shared-memory/: README.md  shared_memory.py
examples/personal-health-tracker/: README.md  health_tracker.py
scenarios/: meds.jsonl  phase1_retrieval_corpus.json  phase1_vector_tiebreaker_corpus.json  preferences.jsonl  roles.jsonl
scripts/: demo_health_marketing.py  demo_v2.py  lore_dr.py  orenyl_dr.py  run_benchmarks.py  run_eval.py  verify_release.py
src/lore/: __init__.py  article30.py  audit.py  audit_anomaly.py  auth.py  compliance.py  config.py  content_hash.py  context_pack.py  db.py  disaster_recovery.py  domain_registry.py  embedding_provider.py  embeddings.py  encryption.py  env_vars.py  extraction_rule.py  federation.py  federation_worker.py  key_rotation.py  lazy.py  lineage.py  metrics.py  models.py  noise_filter.py  policy.py  query_understanding.py  rate_limit.py  release_verify.py  retention.py  retrieval_ranker.py  rule_migration.py  rule_registry.py  rules.py  runtime.py  schema.sql  semantic_dedup.py  server.py  server_stdio.py  summary_rule.py  (+2 more)
src/orenyl/: __init__.py  article30.py  audit.py  auth.py  base_rule.py  config.py  consent.py  content_hash.py  context_pack.py  db.py  disaster_recovery.py  embedding_provider.py  encryption.py  env_vars.py  extraction_runtime.py  federation_worker.py  lazy.py  metrics.py  models.py  policy.py  query_understanding.py  rate_limit.py  release_verify.py  retention.py  rule_registry.py  rules.py  schema.sql  semantic_dedup.py  server.py  server_stdio.py  tenant.py  vector_backend.py
tests/: benchmark_results.json  conftest.py  test_imports.py
tests/benchmarks/: test_phase1_retrieval_quality.py  test_phase1_vector_signal_quality.py  test_phase3_multi_tenant_load.py
tests/integration/: test_adaptive_retrieval_and_scope.py  test_agent_permissions_enforcement.py  test_audit_legacy_env_guard.py  test_audit_security_events.py  test_cascade_optimizations.py  test_context_pack_confidence_filter.py  test_context_pack_embedding_mismatch_handling.py  test_context_pack_read_path_no_writes.py  test_context_pack_v2.py  test_custom_domain_promotion_and_vacuum.py  test_delegation_read_path.py  test_delete_atomicity_soft_and_hard.py  test_docx_contract_parity.py  test_embedding_provider_failures.py  test_encryption_config_fail_closed.py  test_export_domain_formats.py  test_export_domain_pagination_streaming.py  test_fact_version_race_protection.py  test_federation_conflict_resolution.py  test_federation_worker_idempotency.py  test_handler_error_paths.py  test_hard_delete.py  test_hard_delete_atomicity.py  test_hybrid_retrieval_context_pack.py  test_input_validation.py  test_key_rotation_job.py  test_lineage_rule_resolution.py  test_llm_fact_extraction_pipeline.py  test_multi_tenant_fact_derivation.py  test_multidomain_derivation.py  test_perf_regression.py  test_pgvector_adapter_smoke.py  test_phase3_tool_isolation.py  test_phase4_article30_report.py  test_phase4_audit_anomaly_detection.py  test_phase4_audit_hash_chain.py  test_phase4_consent_withdrawal.py  test_phase4_disaster_recovery.py  (+38 more)
(+106 files in other folders)
